--- a/src/Client/Pages/Search.razor.css
+++ b/src/Client/Pages/Search.razor.css
@@ -5,6 +5,15 @@
   padding: 0 10px;
 }
 
+.loader-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -193,7 +202,7 @@
   .search-wrapper {
     margin-right: 1rem;
   }
-  
+
   .search-button {
     display: inline;
   }
