--- a/src/Client/Pages/Reader.razor.css
+++ b/src/Client/Pages/Reader.razor.css
@@ -38,3 +38,11 @@
   top: 0;
   left: 0;
 }
+
+.loader-container {
+  transition-delay: 100ms;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
