--- a/src/Client/Pages/Search.razor.css
+++ b/src/Client/Pages/Search.razor.css
@@ -3,15 +3,15 @@
   flex-direction: column;
   flex: 1;
   padding: 0 10px;
+  position: relative;
 }
 
 .loader-container {
+  transition-delay: 100ms;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
+  left: 50%;
+  top: 0px;
+  transform: translate(-50%);
 }
 
 .header {
