--- a/src/Client/wwwroot/css/app.css
+++ b/src/Client/wwwroot/css/app.css
@@ -401,6 +401,22 @@ li {
   width: 100%;
 }
 
+.overflow-h {
+  overflow: hidden;
+}
+
+.fade {
+  transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
+}
+
+.shown {
+  opacity: 1;
+}
+
+.hidden {
+  opacity: 0;
+}
+
 /* Misc
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
