--- a/src/Client/Pages/Search.razor.css
+++ b/src/Client/Pages/Search.razor.css
@@ -2,15 +2,14 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 0 10px;
+  padding: 0 10px 20px 10px;
   position: relative;
 }
 
-.loader-container {
+::deep aside {
   transition-delay: 100ms;
-  position: absolute;
+  top: 0;
   left: 50%;
-  top: 0px;
   transform: translate(-50%);
 }
 
@@ -50,64 +49,6 @@
 .nav-link:focus {
   color: var(--primary-color);
   text-decoration: none;
-}
-
-.search {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: center;
-  width: 100%;
-}
-
-.search-wrapper {
-  margin-right: 0;
-  position: relative;
-  flex: 1 1 auto;
-}
-
-.search-icon {
-  position: absolute;
-  left: 0;
-  top: 0;
-  border: none;
-  padding: 0 4px;
-  height: 38px;
-  font-size: 24px;
-  color: #888;
-}
-
-.search-clear {
-  position: absolute;
-  right: 0;
-  top: 0;
-  border: none;
-  padding: 0 4px;
-  height: 38px;
-  font-size: 24px;
-}
-
-.search-clear:hover,
-.search-clear:focus {
-  color: var(--primary-color);
-}
-
-.search-input {
-  width: 100%;
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-.search-stats {
-  position: absolute;
-  left: 0;
-  top: 100%;
-  margin-top: -10px;
-  color: #888;
-}
-
-.search-button {
-  display: none;
 }
 
 .results {
@@ -185,25 +126,12 @@
     margin-left: auto;
   }
 
-  .search {
-    width: auto;
-  }
-
-  .search-input {
-    width: 580px;
-  }
-
   .results {
     width: 705px;
   }
-}
 
-@media (min-width: 750px) {
-  .search-wrapper {
-    margin-right: 1rem;
-  }
-
-  .search-button {
-    display: inline;
+  ::deep aside {
+    top: 0;
+    left: 460px;
   }
 }
