--- a/src/Client/Shared/Loader.razor
+++ b/src/Client/Shared/Loader.razor
@@ -1,4 +1,11 @@
-<div class="loader flex-fill flex-center">
-    <i class="loader-icon las la-book"></i>
-    <div class="loader-border"></div>
-</div>
+<aside class="loader-container fade @(Loading ? "show" : "hidden")">
+    <div class="loader flex-fill flex-center">
+        <i class="loader-icon las la-book"></i>
+        <div class="loader-border"></div>
+    </div>
+</aside>
+
+@code {
+    [Parameter]
+    public bool Loading { get; set; } = false;
+}
