--- a/src/Client/Pages/Search.razor
+++ b/src/Client/Pages/Search.razor
@@ -25,31 +25,7 @@
             <i class="las la-book" /> The Archives
         </a>
 
-        <form class="search" role="search" @onsubmit="Submit">
-            <div class="search-wrapper" @onclick="Focus">
-                <span class="search-icon"><i class="la la-search" /></span>
-
-                <input class="search-input" @bind="searchValue" @ref="searchInput" maxlength="2048" name="search"
-                    type="search" autocapitalize="off" autocomplete="off" autocorrect="off" autofocus="" role="combobox"
-                    spellcheck="false" title="Search" />
-
-                @if (fetched)
-                {
-                    <span class="search-stats">
-                        @total.ToString("N0") results in @(timeTaken.ToString("N0"))ms
-                    </span>
-                }
-
-                @if (showSearchClear)
-                {
-                    <button type="button" class="search-clear" @onclick="Clear">
-                        <i class="la la-times" />
-                    </button>
-                }
-            </div>
-
-            <input type="submit" value="Search" class="search-button" />
-        </form>
+        <SearchInput Value=@searchValue ShowStats=@(!loading) TimeTaken=@timeTaken Total=@total ValueChanged="HandleSearchInput" OnSubmitCallback="HandleSubmit" />
 
         <span class="header-auth">
             <NavMenu />
@@ -58,11 +34,8 @@
 </header>
 
 <main class="main">
-    @{var loading = !fetched || fetching; }
-    <aside class="loader-container fade @(loading ? "shown" : "hidden")">
-        <Loader />
-    </aside>
-    
+    <Loader Loading=@loading />
+
     <div class="results fade @(loading ? "hidden" : "shown")">
         @* Result items list *@
         <ul class="results-items-list">
@@ -108,7 +81,7 @@
         @{
             var elasticLimit = 10_000;
             var totalPossible = Math.Min(elasticLimit, total);
-            var maxPage = (int)Math.Ceiling(totalPossible / (decimal)PageSize);
+            var maxPage = (int)Math.Ceiling(totalPossible / (decimal)pageSize);
             var minPage = Math.Max(1, Math.Min(maxPage - 9, Page - 4));
         }
 
@@ -136,19 +109,42 @@
     [Parameter]
     public int Page { get; set; } = 0;
 
-    public int PageSize { get; set; } = 10;
+    private int pageSize { get; set; } = 10;
 
     private IEnumerable<Content> results { get; set; } = Enumerable.Empty<Content>();
-    private bool fetched { get; set; } = false;
-    private bool fetching { get; set; } = false;
-    private long total { get; set; } = 0;
-    private long timeTaken { get; set; } = 0;
-    private ElementReference searchInput { get; set; }
-    private string queryString { get; set; } = string.Empty;
-    private string searchValue { get; set; } = string.Empty;
-    private bool showSearchClear => !string.IsNullOrEmpty(searchValue);
 
-    protected override async Task OnParametersSetAsync()
+    private bool fetched { get; set; } = false;
+
+    private bool fetching { get; set; } = false;
+
+    private long total { get; set; } = 0;
+
+    private long timeTaken { get; set; } = 0;
+
+    private string queryString { get; set; } = string.Empty;
+
+    private string searchValue { get; set; } = string.Empty;
+
+    private bool loading => !fetched || fetching;
+
+    private void HandleSearchInput(string value)
+    {
+        searchValue = value;
+    }
+
+    private async Task HandleSubmit()
+    {
+        Page = 0;
+        navManager.NavigateTo(QueryHelpers.AddQueryString("/search", nameof(SearchRequest.Search), searchValue));
+        await Update();
+    }
+
+    protected async override Task OnInitializedAsync()
+    {
+        await Update();
+    }
+
+    private async Task Update()
     {
         var uri = navManager.ToAbsoluteUri(navManager.Uri);
         queryString = uri.Query;
@@ -159,24 +155,6 @@
         }
 
         await GetSearch();
-    }
-
-    private Task Submit()
-    {
-        Page = 0;
-        navManager.NavigateTo(QueryHelpers.AddQueryString("/search", nameof(SearchRequest.Search), searchValue));
-        return GetSearch();
-    }
-
-    private async Task Clear()
-    {
-        searchValue = string.Empty;
-        await Focus();
-    }
-
-    private async Task Focus()
-    {
-        await searchInput.FocusAsync();
     }
 
     private async Task GetSearch()
@@ -190,7 +168,7 @@
             {
                 [nameof(SearchRequest.Search)] = searchValue,
                 [nameof(SearchRequest.Page)] = Page.ToString(),
-                [nameof(SearchRequest.PageSize)] = PageSize.ToString(),
+                [nameof(SearchRequest.PageSize)] = pageSize.ToString(),
             };
 
             var response = await Http.GetFromJsonAsync<SearchResponse>(
