Attempting to fix issue with height on ios

--- a/src/Client/Pages/Reader.razor
+++ b/src/Client/Pages/Reader.razor
@@ -178,6 +178,7 @@
     protected override async Task OnInitializedAsync()
     {
         loading = true;
+        readerHeight = await JS.InvokeAsync<double>("interopFunctions.getHeight");
         paragraphs = Enumerable.Empty<string>();
         HiddenRefResizedAction = HiddenRefResizedActionCallback;
         ReaderRefResizedAction = ReaderRefResizedActionCallback;
